objects/ConfigIt_Product__c.object
<CustomObject>
    <fields>
        <fullName>Accessory_Code__c</fullName>
        <label>Accessory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Description__c</fullName>
        <label>Accessory Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Parent_Component__c</fullName>
        <label>Accessory Parent Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Parent__c</fullName>
        <label>Accessory Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Quantity__c</fullName>
        <label>Accessory Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accessory_SAP_Level__c</fullName>
        <label>Accessory SAP Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>ConfigIt Products</relationshipLabel>
        <relationshipName>ConfigIt_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>IF(
ISBLANK( Product_Code__c ) , 
Accessory_Code__c , 
Product_Code__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigIt_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConfigIt Product</label>
        <referenceTo>ConfigIt_Product__c</referenceTo>
        <relationshipLabel>ConfigIt Products</relationshipLabel>
        <relationshipName>ConfigIt_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfigIt_Supercode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConfigIt Supercode</label>
        <referenceTo>ConfigIt_Supercode__c</referenceTo>
        <relationshipLabel>ConfigIt Products</relationshipLabel>
        <relationshipName>ConfigIt_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Identifier__c</fullName>
        <label>Configuration Identifier</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configurator_Cart_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Cart Summary</label>
        <referenceTo>APTS_Configurator_Cart_Summary__c</referenceTo>
        <relationshipLabel>ConfigIt Products</relationshipLabel>
        <relationshipName>ConfigIt_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configured_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configured By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ConfigIt_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF(
ISBLANK(Product_Description__c) , 
Accessory_Description__c , 
Product_Description__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>IF(
OR(
ISBLANK(List_Price__c),
List_Price__c = 0
), 
0, 
(List_Price__c - Net_Price__c)/List_Price__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If same configuration is retrieved in one JSON, field will be set to true and record will be deleted in after update trigger.</description>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Configurator_Cart_Summary__r.APTS_Base_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>IF(
OR(
ISBLANK(Configurator_Cart_Summary__c),
Configurator_Cart_Summary__r.APTS_Qty__c = 0
),
0,
Configurator_Cart_Summary__r.APTS_Total_Net_Sales_Price__c/ Configurator_Cart_Summary__r.APTS_Qty__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ConfigIt_Product_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <formula>IF(
ISBLANK(Quantity__c) , 
Accessory_Quantity__c , 
Quantity__c
)</formula>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_Type__c</fullName>
        <label>Selection Type</label>
        <picklist>
            <picklistValues>
                <fullName>ReadyAssembled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelfAssembly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supercode__c</fullName>
        <description>EP R2 Text field for Supercode</description>
        <label>Supercode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>List_Price__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price__c</fullName>
        <formula>Net_Price__c *  Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ConfigIt Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CITPL-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConfigIt Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>